add new endpoint to active consumer to dlq
